# victoria2-war-analyzer

./: .gitignore  agents.md  build-release.ps1  index.html  launch-dev.cmd  launch-dev.ps1  overlay-icon.ps1  package-lock.json  package.json  roadmap.md
docs/: roadmap.md  savefile-format.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: country.rs  encoding.rs  main.rs  parser.rs  view.rs  war.rs
tools/icon-overlay/: Cargo.toml
tools/icon-overlay/src/: main.rs
