[package]
name = "victoria2-war-analyzer"
version = "0.2.0"
description = "Victoria 2 savefile analyzer"
authors = ["Fedacking"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
png = "0.17"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
